appId: com.offmind.aiflappybird
---
- launchApp
- tapOn: "Take Wing"
- assertVisible: "Score"
- tapOn:
    point: "50%,50%"
- tapOn:
    point: "50%,50%"
- tapOn:
    point: "50%,50%"
